@@ -142,5 +142,12 @@ this repository contains the full copyright notices and license terms. -->
             <field name="inherit" ref="stock.shipment_in_return_view_form"/>
             <field name="name">shipment_in_return_form</field>
         </record>
+
+        <record model="ir.ui.view" id="shipment_internal_view_form">
+            <field name="model">stock.shipment.internal</field>
+            <field name="inherit" ref="stock.shipment_internal_view_form"/>
+            <field name="name">shipment_internal_form</field>
+        </record>
+
     </data>
 </tryton>
