@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<data>
+    <xpath expr="//page[@name='outgoing_moves']" position="inside">
+        <field name="root_packages" colspan="4" view_ids="stock_package.package_view_tree"/>
+    </xpath>
+</data>
