@@ -1,3 +1,4 @@
+* Add package to internal shipment with transit
 
 Version 7.4.0 - 2024-11-04
 --------------------------
